Fix forum post editor overlap with memberlist

--- a/scss/main/_a.scss
+++ b/scss/main/_a.scss
@@ -106,6 +106,9 @@
             .list_a6d69a > div:first-child {
                 min-width: 0;
             }
+            .header_a6d69a {
+                z-index: 0;
+            }
 
             // Members list
             .membersWrap_cbd271 {
